apps/interfaces/k8s-dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: dashboard
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: "Host(`k8s.umhomelab.com`) || Host(`www.k8s.umhomelab.com`)"
      kind: Rule
      middlewares:
        - name: authentik-bearer
          namespace: auth
      services:
        - name: dashboard-kong-proxy
          namespace: dashboard
          port: 443
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard-login
  namespace: dashboard
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: "Host(`k.umhomelab.com`) || Host(`www.k.umhomelab.com`)"
      kind: Rule
      services:
        - name: dashboard-kong-proxy
          namespace: dashboard
          port: 443
  tls: {}
